# context-adapter

./: README.md  pyproject.toml
adapters/: __init__.py  base.py  claude_code.py
fidelity/: report.py
harness/: round_trip.py
tests/: test_adapter_base.py  test_adapter_claude_code.py  test_fidelity_report.py  test_round_trip.py
